# secure-vpn

./: .cmake-format.json  .gitignore  1-START-SERVER-SIMPLE.bat  100-PERCENT-VERIFIED.md  ADDITIONAL-MISSING-COMPONENTS.md  ALL-IMPROVEMENTS-FINAL.md  ALL_PAGES_UPDATED.md  BUILD_CUSTOM_OS_ROADMAP.md  BUILD_FIXES_APPLIED.md  BUILD_IN_PROGRESS.md  BUILD_PHAZEBROWSER_NATIVE.md  BULLETPROOF-SSH-FIX.txt  CLIENT_CONFIGS_COMPLETE.md  CMakeLists.txt  COMMERCIAL-FEATURES-SUMMARY.md  COMPLETE-AUDIT-EVERYTHING-MISSING.md  COMPLETE-EMAIL-SERVICE-READY.md  COMPLETE-IMPLEMENTATION-SUMMARY.md  COMPLETE-METADATA-LOGGING-REMOVAL.md  COMPLETE-MISSING-FEATURES.md  COMPLETE-PRIVACY-ACHIEVED.md  COMPLETE-PRIVACY-AUDIT-AND-FIXES.md  COMPLETE-SUMMARY-EVERYTHING-MISSING.md  COMPLETE_ECOSYSTEM_AUDIT.md  COMPLETE_PROTOCOL_AUDIT.md  CONTENT_UPDATES.md  DEEP-AUDIT-COMPLETE.md  DEEP-DIVE-PRODUCTION-ISSUES.md  DEPLOY-CMAKE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STRATEGY.md  DOWNLOADS_COMPLETE.md  DUAL_BOOT_WINDOWS11_GUIDE.md  EMAIL_PASSWORD_FIXED.md  ESSENTIAL_OS_COMPONENTS.md  EXECUTIVE-SUMMARY.md  FINAL-AUDIT-SUMMARY.md  FINAL-BULLETPROOF-FIX.txt  FINAL-COMPLETE-VERIFICATION.md  (+254 more)
_ARCHIVE_OLD_FILES/: ALL-IMPROVEMENTS-COMPLETE.md  AUDIT-REPORT.json  AUDIT-SUMMARY.md  BUILD-GUIDE.md  CHECK-MORE-ON-VPS.txt  CHROOT-COMPLETE-FIX.txt  CODE-ORGANIZATION-AUDIT.md  CODEBASE-COMPLETE-AUDIT.py  CODEBASE-COMPLETE-VERIFICATION.md  COMMERCIAL-FEATURES-AUDIT.md  COMPLETE-AUDIT-EVERYTHING-MISSING.md  COMPLETE-BULLETPROOF-FIX.txt  COMPLETE-EMAIL-SERVICE-SUMMARY.md  COMPLETE-FILE-INVENTORY.md  COMPLETE-FIXES-SUMMARY.md  COMPLETE-IMPROVEMENTS-SUMMARY.md  COMPLETE-INVENTORY.md  COMPLETE-PRIVACY-FIXES-APPLIED.md  COMPLETE-SERVICE-VERIFICATION-AND-FIX.py  COMPREHENSIVE-CODEBASE-DEEP-DIVE.md  COPY-PASTE-DIAGNOSE.txt  CRITICAL-FIXES-REQUIRED.md  CRITICAL-IMPROVEMENTS-PLAN.md  DEPLOY_TO_VPS.md  DOCUMENTATION-IMPROVEMENTS.md  FINAL-CODEBASE-VERIFICATION.md  FINAL-LOGIN-FIX-COMPLETE.py  FINAL-PRIVACY-STATUS.md  FINAL-STATUS-REPORT.md  FIX-VPS-ISSUES.txt  FIXES-COMPLETE.md  FORCE-SSH-RULE.txt  FRONTEND-JAVASCRIPT-GUIDE.md  GIT-PUSH-SUMMARY.md  IMPROVEMENT-ROADMAP.md  JAVA-MIGRATION-GUIDE.md  LICENSE  ONE-COMMAND-FIX.txt  PHAZEVPN-PROTOCOL-REAL.md  PHAZEVPN-REAL-PROTOCOL-CLARIFICATION.md  (+139 more)
_ARCHIVE_OLD_FILES/browser/: CMakeLists.txt
browser-extension/: popup.html
certs/: client.csr
client-builds/: phazevpn-linux-amd64
client-configs/: test-client.ovpn.backup
config/: server-fast.conf  server-gaming.conf  server-maximum-compatibility.conf  server-simple.conf
debian/: control  copyright  files  phaze-vpn.postinst.debhelper  phaze-vpn.postrm.debhelper  phaze-vpn.service  rules
email-service-api/: app.py
extensibility-api/: app.py
go-web-portal/: go.mod
oldfiles/: ALL_VPN_PROTOCOLS_COMPLETE.md  BUILD_FIX_NOTES.md  BUILD_GUI_FIRST_OS.md  BUILD_REAL_BROWSER.md  BUILD_SCRIPT_UPDATED.md  COMPLETE_OS_PACKAGES.md  COMPLETE_PACKAGES_LIST.md  COMPLETE_VPS_REVIEW.md  COMPLETION_REPORT.md  CRITICAL_FIXES_COMPLETED.md  DEEP_DIVE_AUDIT.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  (+87 more)
phazebrowser-native/: ADD_MISSING_FEATURES.md  CMakeLists.txt  COMPLETE_FEATURE_LIST.md  README.md  VPN_FIXES.md  build.sh  package_native_browser.sh
phazebrowser-native/src/: bookmarksdialog.h  browserwindow.h  datamanager.h  downloaddialog.h  downloadmanager.cpp  faviconmanager.cpp  faviconmanager.h  main.cpp  mainwindow.cpp  privacyengine.cpp  searchmanager.cpp  settingsdialog.cpp  vpnmanager.cpp  vpnmanager.h
phazevpn-protocol/: CMakeLists.txt  cert_manager.py  client_manager.py  distributed_routing.py  phazevpn-server-enhanced.py  setup-all-three-vpns.py
phazevpn-protocol-go/: CMakeLists.txt  README.md  go.mod  main.go
phazevpn-protocol-go/cmd/generate-client/: main.go
phazevpn-protocol-go/cmd/phazevpn-client/: main.go
phazevpn-protocol-go/internal/client/: config.go  keyexchange.go
phazevpn-protocol-go/internal/crypto/: manager.go
phazevpn-protocol-go/internal/dht/: discovery.go
phazevpn-protocol-go/internal/ipv6/: leak_protection.go
phazevpn-protocol-go/internal/obfuscation/: shadowsocks.go  v2ray.go
phazevpn-protocol-go/internal/protocol/: packet.go
phazevpn-protocol-go/internal/security/: abuse_prevention.go
phazevpn-protocol-go/internal/server/: handlers.go  keyexchange.go  mempool.go  performance.go  server.go
phazevpn-protocol-go/internal/tun/: manager.go  manager_linux.go
phazevpn-protocol-go/scripts/: create-client.sh  generate-client-config.sh  generate-phazevpn-client-config.py
web-portal/: API-DOCUMENTATION.md  API-KEY-INFO.md  CMakeLists.txt  MAILGUN-SETUP-COMPLETE.md  REFACTORING_NOTES.md  app.py  config.py  email_api.py  email_bounce_handler.py  email_queue.py  email_rate_limit.py  email_smtp_improved.py  email_templates.py  email_validation.py  email_worker.py  error_handling.py  error_messages.py  file_locking.py  generate_all_protocols.py  health_check.py  input_validation.py  logging_config.py  logging_config_improved.py  make-dns-permanent.sh  mysql_db.py  mysql_migration.py  mysql_setup.sql  payment_integrations.py  payment_integrations_secure.py  phazevpn_server_key.py  rate_limiting.py  remove-all-metadata-logging-migration.sql  remove_ip_tracking_migration.sql  requirements.txt  security_utils.py  smtp_config.py
web-portal/models/: __init__.py
web-portal/routes/: __init__.py
web-portal/scripts/: daily-backup.sh  daily-cleanup.sh  health-check.sh  setup-automation.sh
web-portal/services/: __init__.py  email_service.py
web-portal/static/css/: style.css
web-portal/systemd/: email-worker.service
web-portal/templates/: base.html  contact.html  forgot-password.html  login.html  reset-password.html  signup.html
web-portal/templates/admin/: clients.html  payments.html
web-portal/templates/backup-20251125-123649/: blog.html  download-instructions.html
web-portal/templates/emails/: password_reset.html  verification.html  welcome.html  welcome.txt
web-portal/templates/user/: dashboard.html
web-portal/utils/: __init__.py  decorators.py  helpers.py  validators.py
(+1452 files in other folders)
